# petstore_crud_test

./: README.md  pyproject.toml
tests/: test_crud.py
