[tool.poetry]
name = "crudtest"
version = "0.1.0"
description = ""
authors = ["Murad Qaniyev <murad.qaniyev@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytest-order = "^1.3.0"
pytest-dependency = "^0.6.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -sv --maxfail=10"
testpaths = [
    "tests",
]
